Created JOBS page, renamed gigs page, created gig modal + gig prototype in the main page + search bar in the main page for searching gigs and added two buttons in the header.

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -9,19 +9,6 @@
       "name": "Aspire Profile (for Ethearnal)",
       "path": "",
       "files": {
-        "47096164": {
-          "id": "47096164",
-          "path": "main.jade",
-          "output": "main.html",
-          "name": "main.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
         "83964324": {
           "id": "83964324",
           "path": "mixins/countries.jade",
@@ -438,126 +425,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "a3817819": {
-          "id": "a3817819",
-          "path": "mixins/modals/new-modals/add-education.jade",
-          "output": "mixins/modals/new-modals/add-education.html",
-          "name": "add-education.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "3b0dfea4": {
-          "id": "3b0dfea4",
-          "path": "mixins/modals/new-modals/add-job.jade",
-          "output": "mixins/modals/new-modals/add-job.html",
-          "name": "add-job.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "b8724c19": {
-          "id": "b8724c19",
-          "path": "mixins/modals/new-modals/add-skill.jade",
-          "output": "mixins/modals/new-modals/add-skill.html",
-          "name": "add-skill.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "ce17f808": {
-          "id": "ce17f808",
-          "path": "mixins/modals/new-modals/edit-education.jade",
-          "output": "mixins/modals/new-modals/edit-education.html",
-          "name": "edit-education.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "95d1c58c": {
-          "id": "95d1c58c",
-          "path": "mixins/modals/new-modals/edit-job.jade",
-          "output": "mixins/modals/new-modals/edit-job.html",
-          "name": "edit-job.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "9ef16fc6": {
-          "id": "9ef16fc6",
-          "path": "mixins/modals/new-modals/edit-profile.jade",
-          "output": "mixins/modals/new-modals/edit-profile.html",
-          "name": "edit-profile.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "c83ae23b": {
-          "id": "c83ae23b",
-          "path": "mixins/modals/new-modals/edit-skill.jade",
-          "output": "mixins/modals/new-modals/edit-skill.html",
-          "name": "edit-skill.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "7be48a15": {
-          "id": "7be48a15",
-          "path": "mixins/modals/new-modals/add-language.jade",
-          "output": "mixins/modals/new-modals/add-language.html",
-          "name": "add-language.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
         "21d56b17": {
           "id": "21d56b17",
           "path": "js/functions/modals/appearSuccessMessage.js",
@@ -573,21 +440,6 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
-        },
-        "e84d54f5": {
-          "id": "e84d54f5",
-          "path": "mixins/modals/new-modals/edit-language.jade",
-          "output": "mixins/modals/new-modals/edit-language.html",
-          "name": "edit-language.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
         },
         "25ad6d80": {
           "id": "25ad6d80",
@@ -732,45 +584,6 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
-        },
-        "97b652a0": {
-          "id": "97b652a0",
-          "path": "mixins/tabs/education.jade",
-          "output": "mixins/tabs/education.html",
-          "name": "education.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
-        "9a63bee0": {
-          "id": "9a63bee0",
-          "path": "mixins/tabs/languages.jade",
-          "output": "mixins/tabs/languages.html",
-          "name": "languages.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
-        "73810c6e": {
-          "id": "73810c6e",
-          "path": "mixins/tabs/work-experience.jade",
-          "output": "mixins/tabs/work-experience.html",
-          "name": "work-experience.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
         },
         "52752c4b": {
           "id": "52752c4b",
@@ -989,17 +802,6 @@
           "height": 0,
           "width": 0
         },
-        "95e22bb7": {
-          "id": "95e22bb7",
-          "path": "main.html",
-          "output": "main.html",
-          "name": "main.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
         "50a0c463": {
           "id": "50a0c463",
           "path": "mixins/header.jade",
@@ -1011,9 +813,281 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "47096164"
+            "d2e2602f",
+            "4746fb05",
+            "cf34fb91"
           ],
           "type": "jade"
+        },
+        "69462bc2": {
+          "id": "69462bc2",
+          "path": "mixins/modals/add-education.jade",
+          "output": "mixins/modals/add-education.html",
+          "name": "add-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "98c517ba": {
+          "id": "98c517ba",
+          "path": "mixins/modals/add-job.jade",
+          "output": "mixins/modals/add-job.html",
+          "name": "add-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "93c3e5d2": {
+          "id": "93c3e5d2",
+          "path": "mixins/modals/add-language.jade",
+          "output": "mixins/modals/add-language.html",
+          "name": "add-language.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "490c905a": {
+          "id": "490c905a",
+          "path": "mixins/modals/add-skill.jade",
+          "output": "mixins/modals/add-skill.html",
+          "name": "add-skill.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "adb040f2": {
+          "id": "adb040f2",
+          "path": "mixins/modals/edit-education.jade",
+          "output": "mixins/modals/edit-education.html",
+          "name": "edit-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "6ec51759": {
+          "id": "6ec51759",
+          "path": "mixins/modals/edit-job.jade",
+          "output": "mixins/modals/edit-job.html",
+          "name": "edit-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "cf6626da": {
+          "id": "cf6626da",
+          "path": "mixins/modals/edit-language.jade",
+          "output": "mixins/modals/edit-language.html",
+          "name": "edit-language.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "9de242ea": {
+          "id": "9de242ea",
+          "path": "mixins/modals/edit-profile.jade",
+          "output": "mixins/modals/edit-profile.html",
+          "name": "edit-profile.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "45943c66": {
+          "id": "45943c66",
+          "path": "mixins/modals/edit-skill.jade",
+          "output": "mixins/modals/edit-skill.html",
+          "name": "edit-skill.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "8af84729": {
+          "id": "8af84729",
+          "path": "mixins/modals/add-gig.jade",
+          "output": "mixins/modals/add-gig.html",
+          "name": "add-gig.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "eb29c65f": {
+          "id": "eb29c65f",
+          "path": "styles/newstyles/sliders.sass",
+          "output": "styles/newstyles/sliders.css",
+          "name": "sliders.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df"
+          ],
+          "type": "sass"
+        },
+        "9deae3d3": {
+          "id": "9deae3d3",
+          "path": "js/sliders.js",
+          "output": "js/sliders-dist.js",
+          "name": "sliders.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6012a947": {
+          "id": "6012a947",
+          "path": "js/loadProfile.js",
+          "output": "js/loadProfile-dist.js",
+          "name": "loadProfile.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "929b6a1d": {
+          "id": "929b6a1d",
+          "path": "styles/newstyles/main-page-gigs.sass",
+          "output": "styles/newstyles/main-page-gigs.css",
+          "name": "main-page-gigs.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df"
+          ],
+          "type": "sass"
+        },
+        "4746fb05": {
+          "id": "4746fb05",
+          "path": "jobs.jade",
+          "output": "jobs.html",
+          "name": "jobs.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "902e95ab": {
+          "id": "902e95ab",
+          "path": "jobs.html",
+          "output": "jobs.html",
+          "name": "jobs.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "cf34fb91": {
+          "id": "cf34fb91",
+          "path": "gigs.jade",
+          "output": "gigs.html",
+          "name": "gigs.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "e2412df9": {
+          "id": "e2412df9",
+          "path": "gigs.html",
+          "output": "gigs.html",
+          "name": "gigs.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
