made the whole site SPA

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -596,7 +596,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "d2e2602f"
+            "7155957b"
           ],
           "type": "jade"
         },
@@ -715,7 +715,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "d2e2602f"
+            "7155957b"
           ],
           "type": "jade"
         },
@@ -730,7 +730,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "d2e2602f"
+            "7155957b"
           ],
           "type": "jade"
         },
@@ -813,9 +813,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "d2e2602f",
-            "4746fb05",
-            "cf34fb91"
+            "d2e2602f"
           ],
           "type": "jade"
         },
@@ -1027,6 +1025,24 @@
           "output": "styles/newstyles/main-page-gigs.css",
           "name": "main-page-gigs.sass",
           "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "45ce6972": {
+          "id": "45ce6972",
+          "path": "styles/pages/gigs.sass",
+          "output": "styles/pages/gigs.css",
+          "name": "gigs.sass",
+          "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
@@ -1041,11 +1057,11 @@
           ],
           "type": "sass"
         },
-        "4746fb05": {
-          "id": "4746fb05",
-          "path": "jobs.jade",
-          "output": "jobs.html",
-          "name": "jobs.jade",
+        "14c59cad": {
+          "id": "14c59cad",
+          "path": "mixins/gigs-content.jade",
+          "output": "mixins/gigs-content.html",
+          "name": "gigs-content.jade",
           "category": "HTML",
           "autoCompile": true,
           "pretty": true,
@@ -1054,40 +1070,65 @@
           "parents": [],
           "type": "jade"
         },
-        "902e95ab": {
-          "id": "902e95ab",
-          "path": "jobs.html",
-          "output": "jobs.html",
-          "name": "jobs.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "cf34fb91": {
-          "id": "cf34fb91",
-          "path": "gigs.jade",
-          "output": "gigs.html",
+        "2ac09678": {
+          "id": "2ac09678",
+          "path": "mixins/pages/gigs.jade",
+          "output": "mixins/pages/gigs.html",
           "name": "gigs.jade",
           "category": "HTML",
-          "autoCompile": true,
+          "autoCompile": false,
           "pretty": true,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
           "type": "jade"
         },
-        "e2412df9": {
-          "id": "e2412df9",
-          "path": "gigs.html",
-          "output": "gigs.html",
-          "name": "gigs.html",
-          "category": "JUST_WATCH",
+        "e61030f0": {
+          "id": "e61030f0",
+          "path": "mixins/pages/jobs.jade",
+          "output": "mixins/pages/jobs.html",
+          "name": "jobs.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "88b99af5": {
+          "id": "88b99af5",
+          "path": "mixins/pages/profiles.jade",
+          "output": "mixins/pages/profiles.html",
+          "name": "profiles.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "7155957b": {
+          "id": "7155957b",
+          "path": "mixins/pages/profile.jade",
+          "output": "mixins/pages/profile.html",
+          "name": "profile.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
         }
       },
       "deploymentHistory": {},
