You can now create/edit/delete gigs

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -9,6 +9,21 @@
       "name": "Aspire Profile (for Ethearnal)",
       "path": "",
       "files": {
+        "41502636": {
+          "id": "41502636",
+          "path": "mixins/modals/job/edit-job.jade",
+          "output": "mixins/modals/job/edit-job.html",
+          "name": "edit-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
         "83964324": {
           "id": "83964324",
           "path": "mixins/countries.jade",
@@ -537,22 +552,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "8d409b47": {
-          "id": "8d409b47",
-          "path": "js/functions/modals/createLE.js",
-          "output": "js/functions/modals/createLE-dist.js",
-          "name": "createLE.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "863febc1": {
           "id": "863febc1",
           "path": "js/functions/modals/updateProfile.js",
@@ -596,7 +595,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "7155957b"
+            "7155957b",
+            "d2e2602f"
           ],
           "type": "jade"
         },
@@ -715,7 +715,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "7155957b"
+            "7155957b",
+            "d2e2602f"
           ],
           "type": "jade"
         },
@@ -730,7 +731,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "7155957b"
+            "7155957b",
+            "d2e2602f"
           ],
           "type": "jade"
         },
@@ -817,101 +819,11 @@
           ],
           "type": "jade"
         },
-        "69462bc2": {
-          "id": "69462bc2",
-          "path": "mixins/modals/add-education.jade",
-          "output": "mixins/modals/add-education.html",
-          "name": "add-education.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "98c517ba": {
-          "id": "98c517ba",
-          "path": "mixins/modals/add-job.jade",
-          "output": "mixins/modals/add-job.html",
-          "name": "add-job.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "93c3e5d2": {
-          "id": "93c3e5d2",
-          "path": "mixins/modals/add-language.jade",
-          "output": "mixins/modals/add-language.html",
-          "name": "add-language.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
         "490c905a": {
           "id": "490c905a",
           "path": "mixins/modals/add-skill.jade",
           "output": "mixins/modals/add-skill.html",
           "name": "add-skill.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "adb040f2": {
-          "id": "adb040f2",
-          "path": "mixins/modals/edit-education.jade",
-          "output": "mixins/modals/edit-education.html",
-          "name": "edit-education.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "6ec51759": {
-          "id": "6ec51759",
-          "path": "mixins/modals/edit-job.jade",
-          "output": "mixins/modals/edit-job.html",
-          "name": "edit-job.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "cf6626da": {
-          "id": "cf6626da",
-          "path": "mixins/modals/edit-language.jade",
-          "output": "mixins/modals/edit-language.html",
-          "name": "edit-language.jade",
           "category": "HTML",
           "autoCompile": false,
           "pretty": true,
@@ -942,21 +854,6 @@
           "path": "mixins/modals/edit-skill.jade",
           "output": "mixins/modals/edit-skill.html",
           "name": "edit-skill.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f"
-          ],
-          "type": "jade"
-        },
-        "8af84729": {
-          "id": "8af84729",
-          "path": "mixins/modals/add-gig.jade",
-          "output": "mixins/modals/add-gig.html",
-          "name": "add-gig.jade",
           "category": "HTML",
           "autoCompile": false,
           "pretty": true,
@@ -1120,6 +1017,143 @@
           "path": "mixins/pages/profile.jade",
           "output": "mixins/pages/profile.html",
           "name": "profile.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "54d979c1": {
+          "id": "54d979c1",
+          "path": "js/functions/modals/create/createLE.js",
+          "output": "js/functions/modals/create/createLE-dist.js",
+          "name": "createLE.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "2a7f79fa": {
+          "id": "2a7f79fa",
+          "path": "js/functions/modals/create/createGig.js",
+          "output": "js/functions/modals/create/createGig-dist.js",
+          "name": "createGig.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "d4db61e1": {
+          "id": "d4db61e1",
+          "path": "mixins/modals/education/edit-education.jade",
+          "output": "mixins/modals/education/edit-education.html",
+          "name": "edit-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "a57b15c2": {
+          "id": "a57b15c2",
+          "path": "mixins/modals/education/add-education.jade",
+          "output": "mixins/modals/education/add-education.html",
+          "name": "add-education.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "0213833c": {
+          "id": "0213833c",
+          "path": "mixins/modals/job/add-job.jade",
+          "output": "mixins/modals/job/add-job.html",
+          "name": "add-job.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "5ec49311": {
+          "id": "5ec49311",
+          "path": "mixins/modals/language/add-language.jade",
+          "output": "mixins/modals/language/add-language.html",
+          "name": "add-language.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "58a388f2": {
+          "id": "58a388f2",
+          "path": "mixins/modals/language/edit-language.jade",
+          "output": "mixins/modals/language/edit-language.html",
+          "name": "edit-language.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "1bf5df7c": {
+          "id": "1bf5df7c",
+          "path": "mixins/modals/gig/add-gig.jade",
+          "output": "mixins/modals/gig/add-gig.html",
+          "name": "add-gig.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "8ecfe8ca": {
+          "id": "8ecfe8ca",
+          "path": "mixins/modals/gig/edit-gig.jade",
+          "output": "mixins/modals/gig/edit-gig.html",
+          "name": "edit-gig.jade",
           "category": "HTML",
           "autoCompile": false,
           "pretty": true,
