Commiting. Images are not working as expected

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1163,6 +1163,22 @@
             "d2e2602f"
           ],
           "type": "jade"
+        },
+        "5cb7f555": {
+          "id": "5cb7f555",
+          "path": "js/functions/modals/load/gigs.js",
+          "output": "js/functions/modals/load/gigs-dist.js",
+          "name": "gigs.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
