--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1179,6 +1179,37 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "ea822f64": {
+          "id": "ea822f64",
+          "path": "js/functions/modals/delete/gig.js",
+          "output": "js/functions/modals/delete/gig-dist.js",
+          "name": "gig.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "4d2aae9a": {
+          "id": "4d2aae9a",
+          "path": "mixins/modals/gig/modal-gig.jade",
+          "output": "mixins/modals/gig/modal-gig.html",
+          "name": "modal-gig.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
         }
       },
       "deploymentHistory": {},
