Search Engine Works

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1210,6 +1210,22 @@
             "d2e2602f"
           ],
           "type": "jade"
+        },
+        "8c87a4b0": {
+          "id": "8c87a4b0",
+          "path": "js/functions/modals/create/createGigBox.js",
+          "output": "js/functions/modals/create/createGigBox-dist.js",
+          "name": "createGigBox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
