Changes to the gigs

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1226,6 +1226,38 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "1278135d": {
+          "id": "1278135d",
+          "path": "js/functions/modals/collectData/gig.js",
+          "output": "js/functions/modals/collectData/gig-dist.js",
+          "name": "gig.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "7b935f51": {
+          "id": "7b935f51",
+          "path": "js/functions/modals/initializing/modalInputs.js",
+          "output": "js/functions/modals/initializing/modalInputs-dist.js",
+          "name": "modalInputs.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
